Render 'No username' as a secondary text in the password drop-down.

TBR=tedchoc@chromium.org

Bug: 874039
Change-Id: I183677ed1399b8dcd6b94b87e9ae88851fa4441c
Reviewed-on: https://chromium-review.googlesource.com/1181423
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585044}
Former-commit-id: 44204c926e1e256be081868a9eba4ccf7cd70c90