components/autofill/core/browser/suggestion.h
@@ -51,7 +51,7 @@ struct Suggestion {
   // If |custom_icon| is empty, the name of the fallback built-in icon.
   base::string16 icon;
   MatchMode match;
-  bool is_value_bold;  // true if |value| should be displayed in bold type face.
+  bool is_value_secondary;  // |value| should be displayed as secondary text.
 };
 
 }  // namespace autofill
